ui: fix carousel image height with align-self stretch and height 100pct

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -1392,8 +1392,10 @@ footer[role="contentinfo"]
 
   .story-slide-image
     flex: 1
+    align-self: stretch
     position: relative
     overflow: hidden
+    height: 100%
     min-height: 220px
 
     @media (max-width: 767px)
